Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • A amd
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,314
    • Issues 1,314
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 0
    • Merge requests 0
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • drm
  • amd
  • Issues
  • #1499
Closed
Open
Created Feb 18, 2021 by Alexander Monakov@amonakov

5.11 Regression, bisected: Renoir laptop hangs or reboots on shutdown

Acer SF314-42 laptop with Ryzen 4500U does not properly shutdown: it hangs instead, draining battery. During bisect run, it could also reboot rather than hang.

This is a regression in 5.11 since 5.10. I have bisected it to the following commit:

commit 628c36d7b238e2d72158e8aba229ec79c69c157e (refs/bisect/bad)
Author: Prike Liang <Prike.Liang@amd.com>
Date:   Wed Sep 9 14:40:24 2020 +0800

    drm/amdgpu: update amdgpu device suspend/resume sequence for s0i3 support

    - Need skip the RLC/CP/GFX disable for let GFXOFF enter during suspend period.
    - For s0i3 suspend only need suspend DCE and each IP interrupt.
    - Before VBIOS POSTed check and atom HW INT need set the GPU power status change
      to D0 in the resume period, otherwise the HW will be mess up and see the SDMA hang.
    - Need handle the GPU reset path during amdgpu device suspend.

    Signed-off-by: Prike Liang <Prike.Liang@amd.com>
    Reviewed-by: Alex Deucher <alexander.deucher@amd.com>
    Acked-by: Huang Rui <ray.huang@amd.com>
    Signed-off-by: Alex Deucher <alexander.deucher@amd.com>
Assignee
Assign to
Time tracking