drm/amdgpu: fix shutdown with s0ix

For shutdown needs to be handled differently and s0ix.  Add
a new flag to shutdown and use it to adjust behavior appropriately.

Bug: https://gitlab.freedesktop.org/drm/amd/-/issues/1499
Fixes: 628c36d7b238e2 ("drm/amdgpu: update amdgpu device suspend/resume sequence for s0i3 support")
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>
Cc: Prike Liang <Prike.Liang@amd.com>